[project]
name = "posco-streamlit-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "ultralytics>=8.3.169",
]
